--- a/starter-project/package.json
+++ b/starter-project/package.json
@@ -1,5 +1,6 @@
 {
   "name": "starter-project",
+  "homepage": "https://github.com/lcorreab/React_Test.git/starter-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
