cambios en la url del homepage

--- a/starter-project/package.json
+++ b/starter-project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter-project",
-  "homepage": "https://github.com/lcorreab/React_Test.git/starter-project/",
+  "homepage": "https://lcorreab.github.io/React_test/starter-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
